# fuckgiven

./: .clang-format  .editorconfig  .gitignore  README.md  meson.build
src/: main.c  my-app.c  my-app.h  my-fuck.blp  my-fuck.c  my-fuck.h  my-storage.c  my-storage.h  my-window.blp  my-window.c  my-window.h  my-window.ui  resources.xml
src/ui/: app_window.ui
